cabal-version:       >=1.10
name:                sixel
version:             0.1.0.0
synopsis:            Sixel library to show images in a terminal emulator
description:         Sixel can show graphics on a terminal emulator. This library is developed to showing images on ghci.
license:             BSD3
license-file:        LICENSE
homepage:            https://github.com/junjihashimoto/sixel#readme
author:              Junji Hashimoto
maintainer:          junji.hashimoto@gmail.com
copyright:           2020 Junji hashimoto
category:            graphics
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , demo.png

library
  exposed-modules:     Data.Sixel
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels

executable sixel-exe
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >= 4.7 && < 5
                     , sixel
  default-language:    Haskell2010
