cabal-version:       >=1.10
name:                sixel
version:             0.1.2.2
synopsis:            Sixel library to show images in a terminal emulator
description:         Sixel can show graphics on a terminal emulator. This library is developed to showing images on ghci.
license:             BSD3
license-file:        LICENSE
homepage:            https://github.com/junjihashimoto/sixel#readme
author:              Junji Hashimoto
maintainer:          junji.hashimoto@gmail.com
copyright:           2020 Junji hashimoto
category:            graphics
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , demo.png
                   , demo-osc1337.png
                   , README.md

library
  exposed-modules:     Data.Sixel
                     , Data.Sixel.Internal
                     , Data.OSC1337
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
                     , vector
                     , bytestring
                     , process
                     , temporary
                     , base64-bytestring
  c-sources:           csrc/sixel.c

executable sixel-exe
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >= 4.7 && < 5
                     , sixel
  default-language:    Haskell2010
